# game-engine

./: Cargo.toml  README.md
src/: entity.rs  gfx.rs  globals.rs  interface.rs  main.rs  shader.wgsl
src/engine/: camera.rs  controls.rs  entity.rs  game.rs  logic.rs  mod.rs  physics.rs
src/interface/: app.rs  gfx.rs  mod.rs
src/interface/shaders/: shader.wgsl
src/net/: mod.rs
