[package]
name = "game-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit    = "0.26.1"
wgpu     = "0.12.0"
pollster = "0.2.5"
bytemuck = { version = "1.7.3", features = ["derive"] }